[package]
name = "reqwless"
version = "0.14.0"
edition = "2024"
resolver = "2"
rust-version = "1.85"
description = "HTTP client for embedded devices"
documentation = "https://docs.rs/reqwless"
readme = "README.md"
homepage = "https://drogue.io"
repository = "https://github.com/drogue-iot/reqwless"
license = "Apache-2.0"
keywords = ["embedded", "async", "http", "no_std"]
exclude = [".github"]

[dependencies]
buffered-io = { version = "0.6", default-features = false }
embedded-io = { version = "0.7", default-features = false }
embedded-io-async = { version = "0.7", default-features = false }
embedded-nal-async = "0.9.0"
httparse = { version = "1.8.0", default-features = false }
heapless = { version = "0.9", default-features = false }
hex = { version = "0.4", default-features = false }
base64 = { version = "0.21.0", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
log = { version = "0.4", optional = true, default-features = false }
defmt = { version = "0.3", optional = true }
pkcs8 = { version = "0.10.2", default-features = false }
p256 = { version = "0.13", default-features = false, features = [
    "ecdh",
    "ecdsa",
    "sha256",
] }
embedded-tls = { path = "../embedded-tls", default-features = false, features = ["alloc"], optional = true }
rand_chacha = { version = "0.3", default-features = false }
nourl = { version = "0.1.2", default-features = false }

[dev-dependencies]
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-rustls = { version = "0.23.4" }
futures-util = { version = "0.3" }
embedded-io-async = { version = "0.7", features = ["std"] }
embedded-io-adapters = { version = "0.7", features = ["std", "tokio-1"] }
rustls-pemfile = "1.0"
env_logger = "0.11"
log = "0.4"
rand = "0.8"

[features]
default = ["embedded-tls"]
embedded-tls = ["dep:embedded-tls"]
rsa = ["embedded-tls?/alloc", "embedded-tls?/rsa"]
p384 = ["embedded-tls?/p384"]
ed25519 = ["embedded-tls?/ed25519"]
defmt = [
    "dep:defmt",
    "embedded-io/defmt",
    "embedded-io-async/defmt",
    "embedded-tls?/defmt",
    "nourl/defmt",
    "heapless/defmt",
]
